// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ eWvHhg"
      >
        <label
          class="sc-bczRLJ sc-gsnTZi eOxCiu hzPtvw"
          for="search"
        >
          Search me
        </label>
        <div
          class=" css-2b097c-container"
        >
          <div
            class="Search__control css-yk16xz-control"
          >
            <div
              class="Search__value-container css-g1d714-ValueContainer"
            >
              <div
                class="Search__placeholder css-1wa3eu0-placeholder"
              />
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="Search__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="search"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; font-weight: 400; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="Search__indicators css-1hb7zxy-IndicatorsContainer"
            />
          </div>
          <input
            name="search"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ eWvHhg"
    >
      <label
        class="sc-bczRLJ sc-gsnTZi eOxCiu hzPtvw"
        for="search"
      >
        Search me
      </label>
      <div
        class=" css-2b097c-container"
      >
        <div
          class="Search__control css-yk16xz-control"
        >
          <div
            class="Search__value-container css-g1d714-ValueContainer"
          >
            <div
              class="Search__placeholder css-1wa3eu0-placeholder"
            />
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="Search__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="search"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; font-weight: 400; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="Search__indicators css-1hb7zxy-IndicatorsContainer"
          />
        </div>
        <input
          name="search"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Search renders multiple values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ eWvHhg"
      >
        <label
          class="sc-bczRLJ sc-gsnTZi eOxCiu hzPtvw"
          for="search"
        >
          Search me
        </label>
        <div
          class=" css-2b097c-container"
        >
          <div
            class="Search__control css-yk16xz-control"
          >
            <div
              class="Search__value-container css-g1d714-ValueContainer"
            >
              <div
                class="Search__placeholder css-1wa3eu0-placeholder"
              />
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="Search__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="search"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; font-weight: 400; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="Search__indicators css-1hb7zxy-IndicatorsContainer"
            />
          </div>
          <input
            name="search"
            type="hidden"
            value=""
          />
        </div>
        <div
          class="sc-bczRLJ dlKeaP"
        >
          <div
            class="sc-bczRLJ iguufo"
            color="text"
            font-weight="body"
          >
            option 1
            <button
              class="sc-bczRLJ cYDinU"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="sc-bczRLJ gYgFqT"
                display="block"
                fill="none"
                height="16px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </div>
          <div
            class="sc-bczRLJ iguufo"
            color="text"
            font-weight="body"
          >
            option 2
            <button
              class="sc-bczRLJ cYDinU"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="sc-bczRLJ gYgFqT"
                display="block"
                fill="none"
                height="16px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ eWvHhg"
    >
      <label
        class="sc-bczRLJ sc-gsnTZi eOxCiu hzPtvw"
        for="search"
      >
        Search me
      </label>
      <div
        class=" css-2b097c-container"
      >
        <div
          class="Search__control css-yk16xz-control"
        >
          <div
            class="Search__value-container css-g1d714-ValueContainer"
          >
            <div
              class="Search__placeholder css-1wa3eu0-placeholder"
            />
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="Search__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="search"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; font-weight: 400; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="Search__indicators css-1hb7zxy-IndicatorsContainer"
          />
        </div>
        <input
          name="search"
          type="hidden"
          value=""
        />
      </div>
      <div
        class="sc-bczRLJ dlKeaP"
      >
        <div
          class="sc-bczRLJ iguufo"
          color="text"
          font-weight="body"
        >
          option 1
          <button
            class="sc-bczRLJ cYDinU"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="sc-bczRLJ gYgFqT"
              display="block"
              fill="none"
              height="16px"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </div>
        <div
          class="sc-bczRLJ iguufo"
          color="text"
          font-weight="body"
        >
          option 2
          <button
            class="sc-bczRLJ cYDinU"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="sc-bczRLJ gYgFqT"
              display="block"
              fill="none"
              height="16px"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Search renders multiple values with selected item formatter 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ eWvHhg"
      >
        <label
          class="sc-bczRLJ sc-gsnTZi eOxCiu hzPtvw"
          for="search"
        >
          Search me
        </label>
        <div
          class=" css-2b097c-container"
        >
          <div
            class="Search__control css-yk16xz-control"
          >
            <div
              class="Search__value-container css-g1d714-ValueContainer"
            >
              <div
                class="Search__placeholder css-1wa3eu0-placeholder"
              />
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="Search__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="search"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; font-weight: 400; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="Search__indicators css-1hb7zxy-IndicatorsContainer"
            />
          </div>
          <input
            name="search"
            type="hidden"
            value=""
          />
        </div>
        <div
          class="sc-bczRLJ dlKeaP"
        >
          <div
            class="sc-bczRLJ iguufo"
            color="text"
            font-weight="body"
          >
            Generated label 
            <button
              class="sc-bczRLJ cYDinU"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="sc-bczRLJ gYgFqT"
                display="block"
                fill="none"
                height="16px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </div>
          <div
            class="sc-bczRLJ iguufo"
            color="text"
            font-weight="body"
          >
            Generated label 
            <button
              class="sc-bczRLJ cYDinU"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="sc-bczRLJ gYgFqT"
                display="block"
                fill="none"
                height="16px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ eWvHhg"
    >
      <label
        class="sc-bczRLJ sc-gsnTZi eOxCiu hzPtvw"
        for="search"
      >
        Search me
      </label>
      <div
        class=" css-2b097c-container"
      >
        <div
          class="Search__control css-yk16xz-control"
        >
          <div
            class="Search__value-container css-g1d714-ValueContainer"
          >
            <div
              class="Search__placeholder css-1wa3eu0-placeholder"
            />
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="Search__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="search"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; font-weight: 400; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="Search__indicators css-1hb7zxy-IndicatorsContainer"
          />
        </div>
        <input
          name="search"
          type="hidden"
          value=""
        />
      </div>
      <div
        class="sc-bczRLJ dlKeaP"
      >
        <div
          class="sc-bczRLJ iguufo"
          color="text"
          font-weight="body"
        >
          Generated label 
          <button
            class="sc-bczRLJ cYDinU"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="sc-bczRLJ gYgFqT"
              display="block"
              fill="none"
              height="16px"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </div>
        <div
          class="sc-bczRLJ iguufo"
          color="text"
          font-weight="body"
        >
          Generated label 
          <button
            class="sc-bczRLJ cYDinU"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="sc-bczRLJ gYgFqT"
              display="block"
              fill="none"
              height="16px"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Search renders with label 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ eWvHhg"
      >
        <label
          class="sc-bczRLJ sc-gsnTZi eOxCiu hzPtvw"
          for="search"
        >
          Label
        </label>
        <div
          class=" css-2b097c-container"
        >
          <div
            class="Search__control css-yk16xz-control"
          >
            <div
              class="Search__value-container css-g1d714-ValueContainer"
            >
              <div
                class="Search__placeholder css-1wa3eu0-placeholder"
              />
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="Search__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="search"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; font-weight: 400; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="Search__indicators css-1hb7zxy-IndicatorsContainer"
            />
          </div>
          <input
            name="search"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ eWvHhg"
    >
      <label
        class="sc-bczRLJ sc-gsnTZi eOxCiu hzPtvw"
        for="search"
      >
        Label
      </label>
      <div
        class=" css-2b097c-container"
      >
        <div
          class="Search__control css-yk16xz-control"
        >
          <div
            class="Search__value-container css-g1d714-ValueContainer"
          >
            <div
              class="Search__placeholder css-1wa3eu0-placeholder"
            />
            <div
              class="css-b8ldur-Input"
            >
              <div
                class="Search__input"
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="search"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; font-weight: 400; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="Search__indicators css-1hb7zxy-IndicatorsContainer"
          />
        </div>
        <input
          name="search"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
